Fix horizontal scrollbar.

--- a/app/static/css/screen-dark.css
+++ b/app/static/css/screen-dark.css
@@ -18,7 +18,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans&display=swap');
 
 html            { font-family: 'Noto Sans', sans-serif}
-body            { background: #101010; color: #bfbfbf}
+body            { background: #101010; color: #bfbfbf; overflow-x: hidden;}
 a               { color: #9fc6e0; }
 h1, h2          { color: #bfbfbf; }
 h1, h2          { font-family: 'Merriweather Sans'; margin-top: 0.2em; margin-bottom: 0.2em;}
