--- a/app/static/css/screen-light.css
+++ b/app/static/css/screen-light.css
@@ -14,7 +14,7 @@
  * limitations under the License.
  */
 
-body            { font-family: sans-serif; background: #eee; }
+body            { font-family: sans-serif; background: #eee; overflow-x: hidden;}
 a, h1, h2       { color: #377ba8; }
 h1, h2          { font-family: 'Georgia', serif; margin: 0; }
 h1              { border-bottom: 2px solid #eee; }
